<resources>
    <string name="app_name">Notification History</string>
    <string name="_ongoing_channel_name">On going</string>
    <string name="_channel_description">An ongoing notification shown so that system won\'t kill the app in background.</string>
    <string name="_notification_title">Notification History</string>
    <string name="_notification_message">Running…</string>
    <string name="_ticker_text">Notification History Running</string>
    <string name="application_icon">Application icon</string>
    <string name="no_history">No History</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="capture_ongoing_notifications">Capture ongoing notifications</string>
    <string name="_ongoing_summary">This will create a huge amount of redundant notification entries.</string>
    <string name="maximum_entries">Maximum entries</string>
    <string name="summary_max_entries">Maximum notifications to be saved. Older notifications will be automatically deleted. Be careful. Current limit is %s.</string>
    <string name="general">General</string>
    <string name="refresh">Refresh</string>
    <string name="notification">Notification</string>
    <string name="id">ID</string>
    <string name="key">Key</string>
    <string name="package_name">Package name</string>
    <string name="system_time">System Time</string>
    <string name="post_time">Post time</string>
    <string name="when">When</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="big_text">Big text</string>
    <string name="text_lines">Text lines</string>
    <string name="ticker_text">Ticker text</string>
    <string name="tag">Tag</string>
    <string name="ongoing">Ongoing</string>
    <string name="color">Color</string>
    <string name="visibility">Visibility</string>
    <string name="date_filter">Date filter</string>
    <string name="delete">Delete</string>
    <string name="permission">Permission</string>
    <string name="_notification_access_permission_summary">This app requires notification access to record notifications. Get access now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="never">Never</string>
    <string name="_intro">This app records the notification you receive in your phone\'s status bar. To get this app working, do the following.</string>
    <string name="welcome">Welcome</string>
    <string name="_get_permission_explanation">Grant notification access to this app. We require this permission to record notifications.</string>
    <string name="turn_off_notification">Turn off notification</string>
    <string name="_turn_off_notification_explanation">Turn off notifications (ongoing category) so that running service notification won\'t bother you.</string>
    <string name="skip">Skip</string>
    <string name="backup">Backup</string>
    <string name="clear">Clear</string>
    <string name="_summary_clear">Delete all notification entries.</string>
    <string name="export">Export</string>
    <string name="_summary_export">Export all the notification entries in a file.</string>
    <string name="_import">Import</string>
    <string name="_summary_import">Import notification entries from an exported file.</string>
    <string name="system">System</string>
    <string name="notification_access_permission">Notification access permission</string>
    <string name="notification_setting">Notification setting</string>
    <string name="_confirm_clear">Delete all the notification entries? This action cannot be undone.</string>
    <string name="current_entries">Current entries</string>
    <string name="_exporting">Exporting. please wait…</string>
    <string name="error_exporting_file">Error exporting file</string>
    <string name="file_exported">File exported</string>
    <string name="import_finished">Import finished</string>
    <string name="_import_error">An error occurred while importing.</string>
    <string name="_importing">Importing. Please wait…</string>
    <string name="import_complete">Import complete</string>
    <string name="_select_file">Select a file to import…</string>
    <string name="rate_app">Rate app</string>
    <string name="open_source_licences">Open source licences</string>
    <string name="about">About</string>
    <string name="developer_url">https://play.google.com/store/apps/details?id=in.omdev.notificationhistory</string>
    <string name="accessibility_service_description">Notification History accessibility service is required to record received notifications.</string>
    <string name="enable_autostart">Enable autostart</string>
    <string name="autostart_explanation">MIUI detected! Enable autostart so that app can run automatically start in background.</string>
</resources>
