<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_select_date"
        android:title="@string/date_filter"
        android:icon="@drawable/ic_date_range_black_24dp"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menu_item_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_about"
        android:title="@string/about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        app:showAsAction="never" />

</menu>